<resources>
    <string name="app_name">InClass01</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="Signup">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="ema">Email</string>
    <string name="choospass">Choose Password</string>
    <string name="reppass">Repeat Password</string>
</resources>
