<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.venkatesh.inclass01.SignUp">

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textPersonName" android:ems="10" android:id="@+id/etfname"
        android:hint="@string/fname" />
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textPersonName" android:ems="10" android:id="@+id/etlname"
        android:hint="@string/lname" />
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
        android:inputType="textEmailAddress" android:ems="10" android:id="@+id/etemail"
        android:hint="@string/ema" />

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="number" android:ems="10" android:id="@+id/etage"
        android:hint="Age" />

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="number" android:ems="10" android:id="@+id/etweight"
        android:hint="Weight" />


    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textPersonName" android:ems="10" android:id="@+id/etpwd"
        android:hint="@string/choospass" />
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textPersonName" android:ems="10" android:id="@+id/etcpwd"
        android:hint="@string/reppass" />
    <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:text="@string/cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btncancel"/>
        <Button android:text="@string/Signup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnsignup1"/>
    </TableRow>


</LinearLayout>
